--- a/servicos/outros/index.html
+++ b/servicos/outros/index.html
@@ -38,20 +38,23 @@
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=outros&servico=planilha-financeira">
-          Planilha Financeira Pessoal
-          <span>Controle mensal de receitas e despesas</span>
+          <strong class="service-title">Planilha Financeira Pessoal</strong>
+          <span class="service-price">R$ 59,99</span>
+          <span class="service-desc">Controle mensal de receitas e despesas</span>
         </a>
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=outros&servico=organizacao-documentos">
-          Organização de Documentos
-          <span>Digitalização e classificação</span>
+          <strong class="service-title">Organização de Documentos</strong>
+          <span class="service-price">R$ 179,99</span>
+          <span class="service-desc">Digitalização e classificação</span>
         </a>
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=outros&servico=orientacao-financeira">
-          Orientação Financeira Básica
-          <span>Planejamento e educação financeira</span>
+           <strong class="service-title">Orientação Financeira Básica</strong>
+          <span class="service-price">R$ 129,99</span>
+          <span class="service-desc">Planejamento e educação financeira</span>
         </a>
 
       </div>
