--- a/servicos/contabeis/index.html
+++ b/servicos/contabeis/index.html
@@ -38,32 +38,37 @@
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=contabeis&servico=consultoria-contabil">
-          Consultoria Contábil
-          <span>Atendimento personalizado</span>
+          <strong class="service-title">Consultoria Contábil</strong>
+          <span class="service-price">R$ 249,99</span>
+          <span class="service-desc">Atendimento personalizado</span>
         </a>
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=contabeis&servico=planejamento-tributario">
-          Planejamento Tributário
-          <span>Redução legal de impostos</span>
+          <strong class="service-title">Planejamento Tributário</strong>
+          <span class="service-price">R$ 399,99</span>
+          <span class="service-desc">Redução legal de impostos</span>
         </a>
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=contabeis&servico=balanco-patrimonial">
-          Elaboração de Balanço
-          <span>Balanço patrimonial e DRE</span>
+          <strong class="service-title">Elaboração de Balanço</strong>
+          <span class="service-price">R$ 349,99</span>
+          <span class="service-desc">Balanço patrimonial e DRE</span>
         </a>
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=contabeis&servico=regularizacao-empresa">
-          Regularização de Empresa
-          <span>Fiscal, contábil e cadastral</span>
+           <strong class="service-title">Regularização de Empresa</strong>
+          <span class="service-price">R$ 299,99</span>
+         <span class="service-desc">Fiscal, contábil e cadastral</span>
         </a>
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=contabeis&servico=encerramento-empresa">
-          Encerramento de Empresa
-          <span>Baixa completa e segura</span>
+           <strong class="service-title">Encerramento de Empresa</strong>
+          <span class="service-price">R$ 279,99</span>
+          <span class="service-desc">Baixa completa e segura</span>
         </a>
 
       </div>
