--- a/servicos/certificado-digital/index.html
+++ b/servicos/certificado-digital/index.html
@@ -38,19 +38,19 @@
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=certificado-digital&servico=certificado-a1">
-          <strong class="service-title">Certificado Digital A1</strong>
+          <span class="service-title">Certificado Digital A1</span>
           <span class="service-price">R$ 189,99</span>
           </a>
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=certificado-digital&servico=certificado-a3">
-          <strong class="service-title">Certificado Digital A3</strong>
+          <span class="service-title">Certificado Digital A3</span>
           <span class="service-price">R$ 249,99</span>
         </a>
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=certificado-digital&servico=renovacao-certificado">
-          <strong class="service-title">Renovação de Certificado Digital</strong>
+          <span class="service-title">Renovação de Certificado Digital</span>
          <span class="service-price">R$ 149,99</span>
         </a>
 
