--- a/servicos/pessoa-fisica/index.html
+++ b/servicos/pessoa-fisica/index.html
@@ -38,19 +38,19 @@
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=pessoa-fisica&servico=irpf">
-         <strong class="service-title"> Declaração de Imposto de Renda</strong>
+         <span class="service-title"> Declaração de Imposto de Renda</span>
           <span class="service-price">R$ 139,99</span>
           </a>
 
         <a class="service-card"
         href="/jl-servicos-contabeis/servicos/compra/?categoria=pessoa-fisica&servico=cpf-regularizacao">
-        <strong class="service-title">Regularização de CPF</strong>
+        <span class="service-title">Regularização de CPF</span>
         <span class="service-price">R$ 79,99</span>
         </a>
 
         <a class="service-card"
            href="/jl-servicos-contabeis/servicos/compra/?categoria=pessoa-fisica&servico=orientacao-fiscal-pf">
-          <strong class="service-title">Orientação Fiscal Pessoa Física
+          <span class="service-title">Orientação Fiscal Pessoa Física</span>
           <span class="service-price">R$ 119,99</span>
           </a>
 
