--- a/servicos/contabeis/index.html
+++ b/servicos/contabeis/index.html
@@ -17,7 +17,7 @@
   <nav class="breadcrumb container">
   <a href="/jl-servicos-contabeis/">Início</a>
   <span>›</span>
-  <a href="/jl-servicos-contabeis/servicos/index.html">Serviços</a>
+  <a href="/jl-servicos-contabeis/">Serviços</a>
   <span>›</span>
   <strong>Serviços Contábeis</strong>
 </nav>
