--- a/servicos/certidoes-regularizacoes/index.html
+++ b/servicos/certidoes-regularizacoes/index.html
@@ -36,29 +36,29 @@
 
       <div class="services-grid">
 
-        <a class="service-card"
-           href="/jl-servicos-contabeis/compra.html?categoria=certidoes-regularizacoes&servico=certidao-negativa">
-          <span class="service-title">Certidão Negativa de Débitos</span>
-          <span class="service-price">R$ 79,99</span>
-        </a>
+       <a class="service-card"
+   href="/jl-servicos-contabeis/servicos/compra/?categoria=certidoes-regularizacoes&servico=certidao-negativa">
+  <span class="service-title">Certidão Negativa de Débitos</span>
+  <span class="service-price">R$ 79,99</span>
+</a>
 
-        <a class="service-card"
-           href="/jl-servicos-contabeis/compra.html?categoria=certidoes-regularizacoes&servico=regularizacao-cadastral">
-          <span class="service-title">Regularização Cadastral</span>
-          <span class="service-price">R$ 149,99</span>
-        </a>
+<a class="service-card"
+   href="/jl-servicos-contabeis/servicos/compra/?categoria=certidoes-regularizacoes&servico=regularizacao-cadastral">
+  <span class="service-title">Regularização Cadastral</span>
+  <span class="service-price">R$ 149,99</span>
+</a>
 
-        <a class="service-card"
-           href="/jl-servicos-contabeis/compra.html?categoria=certidoes-regularizacoes&servico=certidao-estadual">
-          <span class="service-title">Certidão Estadual</span>
-          <span class="service-price">R$ 69,99</span>
-        </a>
+<a class="service-card"
+   href="/jl-servicos-contabeis/servicos/compra/?categoria=certidoes-regularizacoes&servico=certidao-estadual">
+  <span class="service-title">Certidão Estadual</span>
+  <span class="service-price">R$ 69,99</span>
+</a>
 
-        <a class="service-card"
-           href="/jl-servicos-contabeis/compra.html?categoria=certidoes-regularizacoes&servico=certidao-municipal">
-          <span class="service-title">Certidão Municipal</span>
-          <span class="service-price">R$ 69,99</span>
-        </a>
+<a class="service-card"
+   href="/jl-servicos-contabeis/servicos/compra/?categoria=certidoes-regularizacoes&servico=certidao-municipal">
+  <span class="service-title">Certidão Municipal</span>
+  <span class="service-price">R$ 69,99</span>
+</a>
 
       </div>
     </section>
