--- a/servicos/outros/index.html
+++ b/servicos/outros/index.html
@@ -37,22 +37,22 @@
       <div class="services-grid">
 
         <a class="service-card"
-           href="/jl-servicos-contabeis/compra.html?categoria=outros&servico=planilha-financeira">
-          <span class="service-title">Planilha Financeira Pessoal</span>
-          <span class="service-price">R$ 59,99</span>
-        </a>
+   href="/jl-servicos-contabeis/servicos/compra/?categoria=outros-servicos&servico=planilha-financeira">
+  <span class="service-title">Planilha Financeira Pessoal</span>
+  <span class="service-price">R$ 59,99</span>
+</a>
 
-        <a class="service-card"
-           href="/jl-servicos-contabeis/compra.html?categoria=outros&servico=organizacao-documentos">
-          <span class="service-title">Organização de Documentos</span>
-          <span class="service-price">R$ 179,99</span>
-        </a>
+<a class="service-card"
+   href="/jl-servicos-contabeis/servicos/compra/?categoria=outros-servicos&servico=organizacao-documentos">
+  <span class="service-title">Organização de Documentos</span>
+  <span class="service-price">R$ 179,99</span>
+</a>
 
-        <a class="service-card"
-           href="/jl-servicos-contabeis/compra.html?categoria=outros&servico=orientacao-financeira">
-          <span class="service-title">Orientação Financeira Básica</span>
-          <span class="service-price">R$ 129,99</span>
-        </a>
+<a class="service-card"
+   href="/jl-servicos-contabeis/servicos/compra/?categoria=outros-servicos&servico=orientacao-financeira">
+  <span class="service-title">Orientação Financeira Básica</span>
+  <span class="service-price">R$ 129,99</span>
+</a>
 
       </div>
     </section>
