--- a/lgpd/index.html
+++ b/lgpd/index.html
@@ -1,2 +1,107 @@
-<h1>LGPD</h1>
-<p>Política de Proteção de Dados</p>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Política de Privacidade e LGPD | J L Serviços Contábeis</title>
+
+  <!-- CSS GLOBAL -->
+  <link rel="stylesheet" href="/jl-servicos-contabeis/style.css">
+  <!-- CSS BASE (reaproveita layout padrão) -->
+  <link rel="stylesheet" href="/jl-servicos-contabeis/servicos/mei/mei.css">
+</head>
+
+<body>
+
+  <!-- ===== BREADCRUMB ===== -->
+  <nav class="breadcrumb container" id="breadcrumb">
+    <a href="/jl-servicos-contabeis/">Início</a>
+    <span>›</span>
+    <strong>Política de Privacidade (LGPD)</strong>
+  </nav>
+
+  <main class="container mei-page">
+
+    <!-- ===== HEADER ===== -->
+    <header class="mei-header">
+      <h1>Política de Privacidade e Proteção de Dados</h1>
+      <p>
+        Esta política explica como a J L Serviços Contábeis coleta, utiliza e protege
+        os dados pessoais de seus usuários, em conformidade com a Lei Geral de Proteção de Dados (LGPD).
+      </p>
+    </header>
+
+    <!-- ===== CONTEÚDO ===== -->
+    <section class="mei-section">
+      <h2>1. Coleta de Dados Pessoais</h2>
+      <p>
+        Coletamos apenas os dados necessários para a prestação dos nossos serviços,
+        como nome, e-mail, telefone (WhatsApp) e CPF, fornecidos voluntariamente
+        pelo usuário por meio de formulários ou contato direto.
+      </p>
+    </section>
+
+    <section class="mei-section">
+      <h2>2. Finalidade do Uso dos Dados</h2>
+      <p>
+        Os dados coletados são utilizados para:
+      </p>
+      <ul>
+        <li>Entrar em contato com o cliente</li>
+        <li>Prestar serviços contábeis e administrativos</li>
+        <li>Enviar informações relacionadas aos serviços contratados</li>
+        <li>Cumprir obrigações legais e regulatórias</li>
+      </ul>
+    </section>
+
+    <section class="mei-section">
+      <h2>3. Compartilhamento de Dados</h2>
+      <p>
+        A J L Serviços Contábeis não vende nem compartilha dados pessoais com terceiros,
+        exceto quando necessário para cumprimento de obrigações legais
+        ou mediante consentimento do titular.
+      </p>
+    </section>
+
+    <section class="mei-section">
+      <h2>4. Armazenamento e Segurança</h2>
+      <p>
+        Os dados são armazenados de forma segura e protegidos contra acessos não autorizados,
+        vazamentos ou usos indevidos, seguindo boas práticas de segurança da informação.
+      </p>
+    </section>
+
+    <section class="mei-section">
+      <h2>5. Direitos do Titular</h2>
+      <p>
+        O titular dos dados pode, a qualquer momento:
+      </p>
+      <ul>
+        <li>Solicitar acesso aos seus dados</li>
+        <li>Solicitar correção ou atualização</li>
+        <li>Solicitar a exclusão dos dados, quando aplicável</li>
+        <li>Revogar consentimentos concedidos</li>
+      </ul>
+    </section>
+
+    <section class="mei-section">
+      <h2>6. Contato</h2>
+      <p>
+        Para exercer seus direitos ou esclarecer dúvidas sobre esta política,
+        entre em contato pelos canais oficiais da J L Serviços Contábeis.
+      </p>
+    </section>
+
+    <section class="mei-section">
+      <h2>7. Atualizações desta Política</h2>
+      <p>
+        Esta Política de Privacidade pode ser atualizada a qualquer momento
+        para refletir melhorias ou adequações legais.
+        Recomendamos a revisão periódica deste conteúdo.
+      </p>
+    </section>
+
+  </main>
+
+</body>
+</html>
