--- a/lgpd/index.html
+++ b/lgpd/index.html
@@ -3,101 +3,126 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Política de Privacidade e LGPD | J L Serviços Contábeis</title>
+  <title>Política de Privacidade (LGPD) | J L Serviços Contábeis</title>
 
   <!-- CSS GLOBAL -->
-  <link rel="stylesheet" href="/jl-servicos-contabeis/style.css">
-  <!-- CSS BASE (reaproveita layout padrão) -->
-  <link rel="stylesheet" href="/jl-servicos-contabeis/servicos/mei/mei.css">
+  <link rel="stylesheet" href="/jl-servicos-contabeis/style.css" />
+  <!-- CSS BASE -->
+  <link rel="stylesheet" href="/jl-servicos-contabeis/servicos/mei/mei.css" />
 </head>
 
 <body>
 
   <!-- ===== BREADCRUMB ===== -->
-  <nav class="breadcrumb container" id="breadcrumb">
+  <nav class="breadcrumb container">
     <a href="/jl-servicos-contabeis/">Início</a>
     <span>›</span>
-    <strong>Política de Privacidade (LGPD)</strong>
+    <strong>Política de Privacidade</strong>
   </nav>
 
   <main class="container mei-page">
 
     <!-- ===== HEADER ===== -->
     <header class="mei-header">
-      <h1>Política de Privacidade e Proteção de Dados</h1>
+      <h1>Política de Privacidade</h1>
       <p>
-        Esta política explica como a J L Serviços Contábeis coleta, utiliza e protege
-        os dados pessoais de seus usuários, em conformidade com a Lei Geral de Proteção de Dados (LGPD).
+        Compromisso com a segurança, transparência e proteção dos seus dados
+        pessoais, conforme a Lei Geral de Proteção de Dados (LGPD).
       </p>
     </header>
 
-    <!-- ===== CONTEÚDO ===== -->
+    <!-- ===== INTRODUÇÃO ===== -->
     <section class="mei-section">
-      <h2>1. Coleta de Dados Pessoais</h2>
       <p>
-        Coletamos apenas os dados necessários para a prestação dos nossos serviços,
-        como nome, e-mail, telefone (WhatsApp) e CPF, fornecidos voluntariamente
-        pelo usuário por meio de formulários ou contato direto.
+        A J L Serviços Contábeis respeita a sua privacidade e está comprometida
+        com a proteção dos dados pessoais coletados por meio deste site.
+        Esta Política de Privacidade explica como os dados são coletados,
+        utilizados, armazenados e protegidos.
       </p>
     </section>
 
+    <!-- ===== BASE LEGAL ===== -->
     <section class="mei-section">
-      <h2>2. Finalidade do Uso dos Dados</h2>
+      <h2>Base Legal</h2>
       <p>
-        Os dados coletados são utilizados para:
+        Esta Política de Privacidade foi elaborada em conformidade com a
+        Lei nº 13.709/2018 — Lei Geral de Proteção de Dados Pessoais (LGPD),
+        que regula o tratamento de dados pessoais no Brasil.
       </p>
+    </section>
+
+    <!-- ===== DADOS COLETADOS ===== -->
+    <section class="mei-section">
+      <h2>Quais dados coletamos</h2>
+      <p>Podemos coletar os seguintes dados pessoais:</p>
+      <ul>
+        <li>Nome completo</li>
+        <li>Telefone / WhatsApp</li>
+        <li>E-mail</li>
+        <li>CPF (quando necessário para prestação do serviço)</li>
+        <li>Informações fornecidas voluntariamente em formulários</li>
+      </ul>
+    </section>
+
+    <!-- ===== FINALIDADE ===== -->
+    <section class="mei-section">
+      <h2>Finalidade do uso dos dados</h2>
+      <p>Os dados coletados são utilizados para:</p>
       <ul>
         <li>Entrar em contato com o cliente</li>
-        <li>Prestar serviços contábeis e administrativos</li>
-        <li>Enviar informações relacionadas aos serviços contratados</li>
-        <li>Cumprir obrigações legais e regulatórias</li>
+        <li>Prestar os serviços contábeis contratados</li>
+        <li>Emitir documentos fiscais e obrigações legais</li>
+        <li>Cumprir exigências legais e regulatórias</li>
       </ul>
     </section>
 
+    <!-- ===== COMPARTILHAMENTO ===== -->
     <section class="mei-section">
-      <h2>3. Compartilhamento de Dados</h2>
+      <h2>Compartilhamento de dados</h2>
       <p>
-        A J L Serviços Contábeis não vende nem compartilha dados pessoais com terceiros,
-        exceto quando necessário para cumprimento de obrigações legais
-        ou mediante consentimento do titular.
+        Seus dados pessoais não são vendidos ou compartilhados com terceiros,
+        exceto quando necessário para cumprimento de obrigações legais,
+        fiscais ou regulatórias.
       </p>
     </section>
 
+    <!-- ===== DIREITOS DO TITULAR ===== -->
     <section class="mei-section">
-      <h2>4. Armazenamento e Segurança</h2>
+      <h2>Direitos do titular dos dados</h2>
       <p>
-        Os dados são armazenados de forma segura e protegidos contra acessos não autorizados,
-        vazamentos ou usos indevidos, seguindo boas práticas de segurança da informação.
-      </p>
-    </section>
-
-    <section class="mei-section">
-      <h2>5. Direitos do Titular</h2>
-      <p>
-        O titular dos dados pode, a qualquer momento:
+        Nos termos do artigo 18 da LGPD, o titular dos dados pessoais possui
+        os seguintes direitos:
       </p>
       <ul>
-        <li>Solicitar acesso aos seus dados</li>
-        <li>Solicitar correção ou atualização</li>
+        <li>Confirmar a existência do tratamento</li>
+        <li>Acessar os dados</li>
+        <li>Corrigir dados incompletos ou desatualizados</li>
         <li>Solicitar a exclusão dos dados, quando aplicável</li>
-        <li>Revogar consentimentos concedidos</li>
+        <li>Revogar o consentimento</li>
       </ul>
     </section>
 
+    <!-- ===== SEGURANÇA ===== -->
     <section class="mei-section">
-      <h2>6. Contato</h2>
+      <h2>Segurança dos dados</h2>
       <p>
-        Para exercer seus direitos ou esclarecer dúvidas sobre esta política,
-        entre em contato pelos canais oficiais da J L Serviços Contábeis.
+        Adotamos medidas técnicas e organizacionais adequadas para proteger
+        os dados pessoais contra acessos não autorizados, perdas ou
+        vazamentos.
       </p>
     </section>
 
+    <!-- ===== CONTATO ===== -->
     <section class="mei-section">
-      <h2>7. Atualizações desta Política</h2>
+      <h2>Contato</h2>
       <p>
-        Esta Política de Privacidade pode ser atualizada a qualquer momento
-        para refletir melhorias ou adequações legais.
-        Recomendamos a revisão periódica deste conteúdo.
+        Para exercer seus direitos ou esclarecer dúvidas sobre esta Política
+        de Privacidade, entre em contato:
+      </p>
+      <p>
+        <strong>J L Serviços Contábeis</strong><br />
+        E-mail: contato@seudominio.com<br />
+        WhatsApp: (00) 00000-0000
       </p>
     </section>
 
