--- a/servicos/certidoes-regularizacoes/index.html
+++ b/servicos/certidoes-regularizacoes/index.html
@@ -17,7 +17,7 @@
   <nav class="breadcrumb container">
     <a href="/jl-servicos-contabeis/">Início</a>
     <span>›</span>
-    <a href="/jl-servicos-contabeis/servicos/">Serviços</a>
+    <a href="/jl-servicos-contabeis/">Serviços</a>
     <span>›</span>
     <strong>Certidões e Regularizações</strong>
   </nav>
