--- a/servicos/certificado-digital/index.html
+++ b/servicos/certificado-digital/index.html
@@ -78,7 +78,7 @@
       <h4>Links Rápidos</h4>
       <ul>
         <li><a href="/jl-servicos-contabeis/">Início</a></li>
-        <li><a href="/jl-servicos-contabeis/servicos/">Serviços</a></li>
+        <li><a href="/jl-servicos-contabeis/">Serviços</a></li>
         <li><a href="/jl-servicos-contabeis/sobre/">Quem Somos</a></li>
         <li><a href="/jl-servicos-contabeis/lgpd.html">Política de Privacidade</a></li>
       </ul>
