--- a/index.html
+++ b/index.html
@@ -16,41 +16,50 @@
     <h1 class="site-title">J L Serviços Contábeis</h1>
     <p class="site-subtitle">Atendimento Online</p>
     
-    <!-- BOTÃO MOBILE -->
-<button class="menu-toggle" aria-label="Abrir menu">☰</button>
+    <button class="menu-toggle" aria-label="Abrir menu">☰</button>
 
-<nav class="main-nav">
-  <ul class="menu">
+    <nav class="main-nav">
+      <ul class="menu">
 
-    <li class="menu-item dropdown">
-      <button class="dropdown-toggle" type="button">Serviços</button>
+        <li class="menu-item dropdown">
+          <button class="dropdown-toggle" type="button">Serviços</button>
 
-      <ul class="dropdown-menu">
-        <li><a href="/jl-servicos-contabeis/servicos/mei/">MEI</a></li>
-        <li><a href="/jl-servicos-contabeis/servicos/pessoa-fisica/">Pessoa Física</a></li>
-        <li><a href="/jl-servicos-contabeis/servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
-        <li><a href="/jl-servicos-contabeis/servicos/certificado-digital/">Certificado Digital</a></li>
-        <li><a href="/jl-servicos-contabeis/servicos/contabeis/">Serviços Contábeis</a></li>
-        <li><a href="/jl-servicos-contabeis/servicos/outros/">Outros Serviços</a></li>
+          <ul class="dropdown-menu">
+            <li><a href="/jl-servicos-contabeis/servicos/mei/">MEI</a></li>
+            <li><a href="/jl-servicos-contabeis/servicos/pessoa-fisica/">Pessoa Física</a></li>
+            <li><a href="/jl-servicos-contabeis/servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
+            <li><a href="/jl-servicos-contabeis/servicos/certificado-digital/">Certificado Digital</a></li>
+            <li><a href="/jl-servicos-contabeis/servicos/contabeis/">Serviços Contábeis</a></li>
+            <li><a href="/jl-servicos-contabeis/servicos/outros/">Outros Serviços</a></li>
+          </ul>
+        </li>
+
+        <li class="menu-item"><a href="/jl-servicos-contabeis/blog/">Blog</a></li>
+        <li class="menu-item"><a href="/jl-servicos-contabeis/sobre/">Sobre</a></li>
+        <li class="menu-item"><a href="/jl-servicos-contabeis/lgpd/">LGPD</a></li>
+
       </ul>
-    </li>
-
-    <li class="menu-item"><a href="/jl-servicos-contabeis/blog/">Blog</a></li>
-    <li class="menu-item"><a href="/jl-servicos-contabeis/sobre/">Sobre</a></li>
-    <li class="menu-item"><a href="/jl-servicos-contabeis/lgpd/">LGPD</a></li>
-
-  </ul>
-</nav>
+    </nav>
 
   </div>
 </header>
 
 <main class="container">
 
+  <div style="text-align: center; margin: 50px 0 40px;">
+    <h2 style="color: #bd9617; font-size: 2.2rem; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 10px;">
+      Conteúdo Especializado
+    </h2>
+    <p style="color: #ffffff; opacity: 0.8; font-size: 1.1rem;">
+      Informações essenciais para sua segurança contábil e fiscal
+    </p>
+    <div style="width: 80px; height: 3px; background: #bd9617; margin: 20px auto;"></div>
+  </div>
+
   <section class="blog-home">
 
     <article class="blog-highlight">
-      <img src="https://via.placeholder.com/800x400" alt="Contabilidade Geral">
+      <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Contabilidade+Geral" alt="Contabilidade Geral">
       <div class="blog-content">
         <h2>Contabilidade Geral</h2>
         <p>Entenda os principais conceitos contábeis.</p>
@@ -58,7 +67,7 @@
     </article>
 
     <article class="blog-highlight">
-      <img src="https://via.placeholder.com/800x400" alt="Legislação Contábil">
+      <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Legislação" alt="Legislação Contábil">
       <div class="blog-content">
         <h2>Legislação Contábil</h2>
         <p>Mudanças que impactam MEIs e empresas.</p>
@@ -66,7 +75,7 @@
     </article>
 
     <article class="blog-highlight">
-      <img src="https://via.placeholder.com/800x400" alt="Departamento Pessoal">
+      <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Departamento+Pessoal" alt="Departamento Pessoal">
       <div class="blog-content">
         <h2>Departamento Pessoal</h2>
         <p>Folha, direitos e obrigações.</p>
@@ -74,7 +83,7 @@
     </article>
 
     <article class="blog-highlight">
-      <img src="https://via.placeholder.com/800x400" alt="Fiscal">
+      <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Fiscal" alt="Fiscal">
       <div class="blog-content">
         <h2>Fiscal</h2>
         <p>Tributos e impostos explicados.</p>
@@ -82,7 +91,7 @@
     </article>
 
     <article class="blog-highlight">
-      <img src="https://via.placeholder.com/800x400" alt="Contábil">
+      <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Contábil" alt="Contábil">
       <div class="blog-content">
         <h2>Contábil</h2>
         <p>Dicas para manter tudo organizado.</p>
@@ -93,12 +102,10 @@
 
 </main>
 
-  <!-- ===== FOOTER ===== -->
 <footer class="site-footer">
 
   <div class="footer-container">
 
-    <!-- COLUNA 1 -->
     <div class="footer-col">
       <h3>J L Serviços Contábeis</h3>
       <p>
@@ -107,18 +114,16 @@
       </p>
     </div>
 
-    <!-- COLUNA 2 -->
     <div class="footer-col">
       <h4>Links Rápidos</h4>
       <ul>
         <li><a href="/jl-servicos-contabeis/">Início</a></li>
-        <li><a href="/jl-servicos-contabeis/">Serviços</a></li>
+        <li><a href="/jl-servicos-contabeis/servicos/mei/">Serviços</a></li>
         <li><a href="/jl-servicos-contabeis/sobre/">Quem Somos</a></li>
-        <li><a href="/jl-servicos-contabeis/lgpd/index.html">Política de Privacidade</a></li>
+        <li><a href="/jl-servicos-contabeis/lgpd/">Política de Privacidade</a></li>
       </ul>
     </div>
 
-    <!-- COLUNA 3 -->
     <div class="footer-col">
       <h4>Contato</h4>
 
@@ -156,7 +161,6 @@
   </div>
 
 </footer>
-
 
 <script type="module" src="./menu.js"></script>
 </body>
