--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
     </article>
 
     <article class="blog-highlight">
-      <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Legislação" alt="Legislação Contábil">
-      <div class="blog-content">
-        <h2>Legislação Contábil</h2>
-        <p>Mudanças que impactam MEIs e empresas em 2026.</p>
-      </div>
-    </article>
+  <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Legislação+2026" alt="Legislação Contábil">
+  <div class="blog-content">
+    <h2>Mudanças para 2026</h2>
+    <p>Fique por dentro das novas regras tributárias e limites de faturamento para este ano.</p>
+    <a href="/jl-servicos-contabeis/blog/mudancas-contabeis-2026.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
+  </div>
+</article>
 
     <article class="blog-highlight">
   <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Contratação+MEI" alt="Departamento Pessoal">
