--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
   <section class="blog-home">
 
     <article class="blog-highlight">
-      <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Contabilidade+Geral" alt="Contabilidade Geral">
-      <div class="blog-content">
-        <h2>Contabilidade Geral</h2>
-        <p>Entenda os principais conceitos contábeis para organizar sua empresa.</p>
-      </div>
-    </article>
+  <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=PF+vs+PJ" alt="Contabilidade Geral">
+  <div class="blog-content">
+    <h2>Conta PF vs PJ: Entenda</h2>
+    <p>Descubra por que separar as suas contas pessoais das da empresa é vital para o seu sucesso.</p>
+    <a href="/jl-servicos-contabeis/blog/separar-conta-pf-pj.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
+  </div>
+</article>
 
     <article class="blog-highlight">
   <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Legislação+2026" alt="Legislação Contábil">
