--- a/index.html
+++ b/index.html
@@ -56,52 +56,52 @@
     <div style="width: 80px; height: 3px; background: #bd9617; margin: 20px auto;"></div>
   </div>
 
-  <section class="blog-home">
+ <section class="blog-home">
 
     <article class="blog-highlight">
-  <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=PF+vs+PJ" alt="Contabilidade Geral">
-  <div class="blog-content">
-    <h2>Conta PF vs PJ: Entenda</h2>
-    <p>Descubra por que separar as suas contas pessoais das da empresa é vital para o seu sucesso.</p>
-    <a href="/jl-servicos-contabeis/blog/separar-conta-pf-pj.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
-  </div>
-</article>
+      <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=PF+vs+PJ" alt="Contabilidade Geral">
+      <div class="blog-content">
+        <h2>Conta PF vs PJ: Entenda</h2>
+        <p>Descubra por que separar as suas contas pessoais das da empresa é vital para o seu sucesso.</p>
+        <a href="blog/separar-conta-pf-pj.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
+      </div>
+    </article>
 
     <article class="blog-highlight">
-  <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Legislação+2026" alt="Legislação Contábil">
-  <div class="blog-content">
-    <h2>Mudanças para 2026</h2>
-    <p>Fique por dentro das novas regras tributárias e limites de faturamento para este ano.</p>
-    <a href="/jl-servicos-contabeis/blog/mudancas-contabeis-2026.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
-  </div>
-</article>
+      <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Legislação+2026" alt="Legislação Contábil">
+      <div class="blog-content">
+        <h2>Mudanças para 2026</h2>
+        <p>Fique por dentro das novas regras tributárias e limites de faturamento para este ano.</p>
+        <a href="blog/mudancas-contabeis-2026.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
+      </div>
+    </article>
 
     <article class="blog-highlight">
-  <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Contratação+MEI" alt="Departamento Pessoal">
-  <div class="blog-content">
-    <h2>Contratar no MEI: Regras</h2>
-    <p>Saiba quanto custa e como registrar seu primeiro funcionário de forma legal e segura.</p>
-    <a href="/jl-servicos-contabeis/blog/contratar-funcionario-mei.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
-  </div>
-</article>
+      <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Contratação+MEI" alt="Departamento Pessoal">
+      <div class="blog-content">
+        <h2>Contratar no MEI: Regras</h2>
+        <p>Saiba quanto custa e como registrar seu primeiro funcionário de forma legal e segura.</p>
+        <a href="blog/contratar-funcionario-mei.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
+      </div>
+    </article>
 
     <article class="blog-highlight">
       <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Guia+DAS-MEI" alt="Fiscal">
       <div class="blog-content">
         <h2>Guia DAS-MEI: Evite Multas</h2>
         <p>Saiba como manter seu imposto mensal em dia e como regularizar atrasos.</p>
-        <a href="/jl-servicos-contabeis/blog/guia-das-mei.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
+        <a href="blog/guia-das-mei.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
       </div>
     </article>
 
     <article class="blog-highlight">
-  <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Checklist+Mensal" alt="Contábil">
-  <div class="blog-content">
-    <h2>Documentos Mensais</h2>
-    <p>Confira o checklist completo do que você precisa enviar para manter sua empresa regular.</p>
-    <a href="/jl-servicos-contabeis/blog/documentos-mensais-contador.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
-  </div>
-</article>
+      <img src="https://via.placeholder.com/800x400/0a192f/bd9617?text=Checklist+Mensal" alt="Contábil">
+      <div class="blog-content">
+        <h2>Documentos Mensais</h2>
+        <p>Confira o checklist completo do que você precisa enviar para manter sua empresa regular.</p>
+        <a href="blog/documentos-mensais-contador.html" style="color:#bd9617; font-weight:bold; text-decoration:none; display:inline-block; margin-top:10px;">Ler Artigo Completo →</a>
+      </div>
+    </article>
 
   </section>
 
