--- a/servicos/certidoes-regularizacoes/index.html
+++ b/servicos/certidoes-regularizacoes/index.html
@@ -4,130 +4,71 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Certidões e Regularizações | J L Serviços Contábeis</title>
-
-  <!-- CSS GLOBAL -->
-  <link rel="stylesheet" href="/jl-servicos-contabeis/style.css">
-  <!-- CSS BASE (reaproveita o layout do MEI) -->
-  <link rel="stylesheet" href="../mei/mei.css">
+  
+  <link rel="stylesheet" href="../../style.css">
+  <link rel="stylesheet" href="./certidoes.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
+<body>
 
-  <body>
+  <header class="site-header">
+    <div class="container header-top">
+      <h1 class="site-title" style="font-size: 1.5rem;">J L Serviços Contábeis</h1>
+      <nav class="main-nav">
+        <ul class="menu">
+          <li class="menu-item"><a href="../../index.html">Início</a></li>
+          <li class="menu-item"><a href="../../blog/index.html">Blog</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <!-- ===== BREADCRUMB ===== -->
   <nav class="breadcrumb container">
-    <a href="/jl-servicos-contabeis/">Início</a>
-    <span>›</span>
-    <a href="/jl-servicos-contabeis/">Serviços</a>
-    <span>›</span>
-    <strong>Certidões e Regularizações</strong>
+    <a href="../../index.html">Início</a> / <span>Serviços</span> / <strong>Certidões</strong>
   </nav>
 
-  <main class="container mei-page">
+  <main class="container certidoes-page">
 
-    <!-- ===== TÍTULO ===== -->
-    <header class="mei-header">
+    <header class="certidoes-header">
       <h1>Certidões e Regularizações</h1>
-      <p>Emissão e regularização de documentos fiscais e cadastrais.</p>
+      <p>Emissão de documentos e regularização de pendências fiscais com agilidade e segurança digital.</p>
     </header>
 
-    <!-- ===== SERVIÇOS ===== -->
-    <section class="mei-section mei-servicos">
+    <section class="certidoes-section">
       <h2>Serviços Disponíveis</h2>
 
       <div class="services-grid">
+        <a class="service-card" data-servico="certidao-negativa">
+          <span class="service-title">Certidão Negativa de Débitos (CND)</span>
+          <span class="service-price">R$ 79,99</span>
+        </a>
 
-       <a class="service-card"
-   href="/jl-servicos-contabeis/servicos/compra/?categoria=certidoes-regularizacoes&servico=certidao-negativa">
-  <span class="service-title">Certidão Negativa de Débitos</span>
-  <span class="service-price">R$ 79,99</span>
-</a>
+        <a class="service-card" data-servico="regularizacao-cadastral">
+          <span class="service-title">Regularização Cadastral</span>
+          <span class="service-price">R$ 149,99</span>
+        </a>
 
-<a class="service-card"
-   href="/jl-servicos-contabeis/servicos/compra/?categoria=certidoes-regularizacoes&servico=regularizacao-cadastral">
-  <span class="service-title">Regularização Cadastral</span>
-  <span class="service-price">R$ 149,99</span>
-</a>
+        <a class="service-card" data-servico="certidao-estadual">
+          <span class="service-title">Certidão Estadual</span>
+          <span class="service-price">R$ 69,99</span>
+        </a>
 
-<a class="service-card"
-   href="/jl-servicos-contabeis/servicos/compra/?categoria=certidoes-regularizacoes&servico=certidao-estadual">
-  <span class="service-title">Certidão Estadual</span>
-  <span class="service-price">R$ 69,99</span>
-</a>
-
-<a class="service-card"
-   href="/jl-servicos-contabeis/servicos/compra/?categoria=certidoes-regularizacoes&servico=certidao-municipal">
-  <span class="service-title">Certidão Municipal</span>
-  <span class="service-price">R$ 69,99</span>
-</a>
-
+        <a class="service-card" data-servico="certidao-municipal">
+          <span class="service-title">Certidão Municipal</span>
+          <span class="service-price">R$ 69,99</span>
+        </a>
       </div>
     </section>
 
   </main>
 
-    <!-- ===== FOOTER ===== -->
-<footer class="site-footer">
-
-  <div class="footer-container">
-
-    <!-- COLUNA 1 -->
-    <div class="footer-col">
-      <h3>J L Serviços Contábeis</h3>
-      <p>
-        Soluções contábeis com transparência, segurança e foco em resultados
-        para MEI, Pessoa Física e Empresas.
-      </p>
+  <footer class="site-footer" style="text-align: center; padding: 60px 0 30px; border-top: 1px solid rgba(255,255,255,0.1); margin-top: 80px;">
+    <div class="container">
+      <h3 style="color: #bd9617; margin-bottom: 10px;">J L Serviços Contábeis</h3>
+      <p style="color: #fff; opacity: 0.6; font-size: 0.9rem;">© 2026 — Todos os direitos reservados</p>
     </div>
+  </footer>
 
-    <!-- COLUNA 2 -->
-    <div class="footer-col">
-      <h4>Links Rápidos</h4>
-      <ul>
-        <li><a href="/jl-servicos-contabeis/">Início</a></li>
-        <li><a href="/jl-servicos-contabeis/">Serviços</a></li>
-        <li><a href="/jl-servicos-contabeis/sobre/">Quem Somos</a></li>
-        <li><a href="/jl-servicos-contabeis/lgpd/index.html">Política de Privacidade</a></li>
-      </ul>
-    </div>
-
-    <!-- COLUNA 3 -->
-    <div class="footer-col">
-      <h4>Contato</h4>
-
-      <a href="https://wa.me/5561920041427"
-         target="_blank"
-         style="
-           display:inline-block;
-           background:#25D366;
-           color:#000;
-           padding:12px 20px;
-           border-radius:30px;
-           font-weight:bold;
-           text-decoration:none;
-           margin-bottom:15px;
-         ">
-        Falar no WhatsApp
-      </a>
-
-      <p style="margin-top:15px;">
-        jlservicoscontabeis0@gmail.com
-      </p>
-    </div>
-
-  </div>
-
-  <div style="
-    border-top:1px solid rgba(255,255,255,0.1);
-    margin-top:40px;
-    padding-top:20px;
-    text-align:center;
-    font-size:14px;
-    color:#ffffff99;
-  ">
-    © 2026 J L Serviços Contábeis — Todos os direitos reservados
-  </div>
-
-</footer>
-
+  <script src="./certidoes.js"></script>
 </body>
 </html>
